<resources>
    <string name="app_name">Animal School</string>
    <string name="menu_back">Background Menu</string>
    <string name="safari_back">Background Safari</string>
    <string name="oceanbackground">Background Ocean</string>
    <string name="forestbackground">Background Forest</string>
    <string name="arcticbackground">Background Arctic</string>
    <string name="lion_text_name">Name: Lion</string>
    <string name="lion_text_diet">Diet: Meat</string>
    <string name="lion_text_habitat">Habitat: Sub-Saharan Africa</string>
    <string name="lion_text_congrats">Congratulations!</string>
    <string name="lion_text_score">You scored 1 out of 5</string>
    <string name="orca_text_name">Name: Orca</string>
    <string name="orca_text_diet">Diet: Birds, Squid and Octopuses</string>
    <string name="orca_text_habitat">Habitat: Oceans and Seas</string>
    <string name="monkey_text_name">Name: Monkey</string>
    <string name="monkey_text_diet">Diet: Bananas</string>
    <string name="monkey_text_habitat">Habitat: Forest</string>
    <string name="penguin_text_name">Name: Penguin</string>
    <string name="penguin_text_diet">Diet: Fish</string>
    <string name="penguin_text_habitat">Habitat: Southern Hemisphere</string>
    <string name="chart_header">User Statistics</string>
</resources>
